# streaming-pkg-with-dab

./: .gitignore  LICENSE.txt  README.md  databricks.yml  deployment.yml  pyproject.toml  template.yaml
.github/workflows/: onpush.yml
src/streaming_pkg_with_dab/: common.py  config.py
src/streaming_pkg_with_dab/tasks/: reader.py  writer.py
tests/unit/: conftest.py  test_reader.py  test_writer.py
